# PacificColombia_Rainfall_ENSO

./: .gitignore  README.md  pyproject.toml
data/: README.md
data/GPM/: download.sh
data/TRMM/: download.sh
notebooks/: nino_precipitation.ipynb
scripts/: add_trmm_gpm_units.py  aggregate_trmm_gpm.py  aggregate_trmm_monthly.py  download_oisst.py  download_oisst.sh  download_trmm_gpm.sh  pacifico.py
src/rc_rainfall/: __init__.py  data_utils.py  plot_utils.py
